# qats

./: README.md
mobile/: package-lock.json  package.json  tailwind.config.js
mobile/app/: _layout.tsx  index.tsx
mobile/app/teste/: index.tsx
server/: Cargo.toml  Dockerfile  docker-compose.yml
server/migrations/: 20240706225856_create_init_db.sql  20240707201100_create.sql
server/src/: db.rs  main.rs
server/src/controllers/: mod.rs  sale_controller.rs  station_controller.rs  store_controller.rs  user_controller.rs
server/src/models/: mod.rs  request_model.rs  sale_model.rs  station_model.rs  store_model.rs  user_model.rs
server/src/services/: mod.rs  sale_service.rs  station_service.rs  store_service.rs  user_service.rs
server/src/test/: mod.rs  user_api_test.rs
